# remote-ubuntu-desktop

./: DEPLOYMENT.md  LICENSE  README.md  requirements.txt  start-client-cpp.sh  start-client.sh  start-frontend.sh  start-server.sh
client/: config.example.json  config.json  main.py  pyproject.toml
client-cpp/: CMakeLists.txt  README.md
client-cpp/src/: config.cpp  config.h  device_manager.cpp  device_manager.h  input_injector.cpp  input_injector.h  main.cpp  signaling_client.cpp  signaling_client.h  webrtc_pipeline.cpp  webrtc_pipeline.h
client/audio/: __init__.py  opus_encoder.py  pipewire_capture.py  source_detector.py
client/capture/: adaptive_framerate.py  pipewire_stream.py  test_video.py  video_encoder.py  wayland_capture.py  wlr_screencopy.py  xdg_portal.py
client/clipboard/: manager.py
client/core/: config.py  device_manager.py  signaling_client.py
client/file_transfer/: manager.py
client/input/: gnome_injector.py  injector.py  stuck_key_recovery.py  wlroots_injector.py  x11_injector.py
client/monitoring/: __init__.py  performance.py
client/protocol/: message_types.py  schemas.py  states.py
client/webrtc/: datachannel.py  encoder_tuning.py  manager.py
frontend/: .tmp_rc_webrtc_e2e.mjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: FileTransfer.css  FileTransfer.tsx  PerformanceDashboard.css  PerformanceDashboard.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/pages/: DeviceListPage.tsx  LoginPage.tsx  SessionPage.tsx
frontend/src/protocol/: errorCodes.ts  messageTypes.ts  schemas.ts  states.ts
frontend/src/services/: api.ts  signaling.ts  webrtc.ts
server/: .env.example  config.py  config.yaml  logging_config.py  main.py  pyproject.toml
server/api/v1/: auth.py  devices.py  groups.py  metrics.py  setup.py
server/audit/: logger.py
server/auth/: jwt.py  password.py
server/database/: database.py  transactions.py
server/models/: models.py
server/monitoring/: performance.py
server/protocol/: error_codes.py
server/session/: manager.py
server/websocket/: ack_manager.py  auth.py  connection_manager.py  endpoint.py  router.py
